Fix:footer, clearCart and body x overflow

--- a/Frontend/SurinasCukraszda/src/App.css
+++ b/Frontend/SurinasCukraszda/src/App.css
@@ -95,3 +95,7 @@ body {
 .card-body {
   padding: 15px;
 }
+
+body {
+  overflow-x: hidden;
+}
