--- a/Frontend/SurinasCukraszda/src/Cart/Cart.css
+++ b/Frontend/SurinasCukraszda/src/Cart/Cart.css
@@ -116,4 +116,17 @@
     text-align: center;
     margin-top: 30px;
   }
+  html, body, #root {
+    height: 100%;
+    margin: 0;
+  }
   
+  .page-container {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+  }
+  
+  .content-wrap {
+    flex: 1;
+  }
